--- a/css/App.css
+++ b/css/App.css
@@ -60,8 +60,9 @@ user-select: none;
   padding: 0px;
   height: 100%;
   color: #fff;
+  max-width: 400px;
   font-family: "Courier New", Courier, monospace;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(80, 80, 80, 1.0);
 }
 
 .control-element{
@@ -70,6 +71,7 @@ user-select: none;
   margin-top: 10px;
   display: inline-block;
 }
+
 .control-group{
   
   padding: 10px;
